[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Level2.gd" type="Script" id=3]
[ext_resource path="res://scenes/Badguy.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/MovingBadguy.gd" type="Script" id=5]
[ext_resource path="res://scenes/EscQuit.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/UI.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Level2" type="Node2D"]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 72, 56 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="FloorNodes" type="Node" parent="."]

[node name="Floor" parent="FloorNodes" instance=ExtResource( 2 )]
position = Vector2( 40, 112 )
scale = Vector2( 3, 1 )

[node name="Floor2" parent="FloorNodes" instance=ExtResource( 2 )]
position = Vector2( 112, 96 )
scale = Vector2( 3, 1 )

[node name="Floor14" parent="FloorNodes" instance=ExtResource( 2 )]
position = Vector2( 600, 296 )
scale = Vector2( 10.48, 1 )

[node name="Floor15" parent="FloorNodes" instance=ExtResource( 2 )]
position = Vector2( 896, 296 )
scale = Vector2( 10.48, 1 )

[node name="Floor16" parent="FloorNodes" instance=ExtResource( 2 )]
position = Vector2( 792, 272 )
scale = Vector2( 4.96, 1 )

[node name="Floor17" parent="FloorNodes" instance=ExtResource( 2 )]
position = Vector2( 1096, 296 )
scale = Vector2( 10.48, 1 )

[node name="Floor18" parent="FloorNodes" instance=ExtResource( 2 )]
position = Vector2( 1392, 296 )
scale = Vector2( 10.48, 1 )

[node name="Floor19" parent="FloorNodes" instance=ExtResource( 2 )]
position = Vector2( 1288, 272 )
scale = Vector2( 4.96, 1 )

[node name="Floor20" parent="FloorNodes" instance=ExtResource( 2 )]
position = Vector2( -464, 296 )
scale = Vector2( 10.48, 1 )

[node name="Floor21" parent="FloorNodes" instance=ExtResource( 2 )]
position = Vector2( -168, 296 )
scale = Vector2( 10.48, 1 )

[node name="Floor22" parent="FloorNodes" instance=ExtResource( 2 )]
position = Vector2( -272, 272 )
scale = Vector2( 4.96, 1 )

[node name="Floor3" parent="FloorNodes" instance=ExtResource( 2 )]
position = Vector2( 184, 72 )
scale = Vector2( 3, 1 )

[node name="Floor4" parent="FloorNodes" instance=ExtResource( 2 )]
position = Vector2( 256.64, 88 )
scale = Vector2( 1.04, 1 )

[node name="Floor5" parent="FloorNodes" instance=ExtResource( 2 )]
position = Vector2( 296.96, 120 )
scale = Vector2( 1.04, 1 )

[node name="Floor6" parent="FloorNodes" instance=ExtResource( 2 )]
position = Vector2( 240, 152 )
scale = Vector2( 1.04, 1 )

[node name="Floor7" parent="FloorNodes" instance=ExtResource( 2 )]
position = Vector2( 288.64, 216 )
scale = Vector2( 1.04, 1 )

[node name="Floor8" parent="FloorNodes" instance=ExtResource( 2 )]
position = Vector2( 336, 216 )
scale = Vector2( 1.04, 1 )

[node name="Floor9" parent="FloorNodes" instance=ExtResource( 2 )]
position = Vector2( 376.64, 200 )
scale = Vector2( 1.04, 1 )

[node name="Floor10" parent="FloorNodes" instance=ExtResource( 2 )]
position = Vector2( 424, 176 )
scale = Vector2( 1.04, 1 )

[node name="Floor11" parent="FloorNodes" instance=ExtResource( 2 )]
position = Vector2( 480, 176 )
scale = Vector2( 0.448717, 0.466169 )

[node name="Floor12" parent="FloorNodes" instance=ExtResource( 2 )]
position = Vector2( 528, 192 )
scale = Vector2( 0.448717, 0.466169 )

[node name="Floor13" parent="FloorNodes" instance=ExtResource( 2 )]
position = Vector2( 568, 168 )
scale = Vector2( 0.448717, 0.466169 )

[node name="Victory" type="Area2D" parent="."]
position = Vector2( 1552, 272 )
collision_layer = 1024
collision_mask = 1024
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Victory"]
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="Victory"]
color = Color( 0.137255, 0.196078, 0.827451, 1 )
polygon = PoolVector2Array( -8, -8, -8, 8, 8, 8, 8, -8 )

[node name="Victory2" type="Area2D" parent="."]
position = Vector2( -456, 272 )
collision_layer = 1024
collision_mask = 1024
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Victory2"]
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="Victory2"]
color = Color( 0.137255, 0.196078, 0.827451, 1 )
polygon = PoolVector2Array( -8, -8, -8, 8, 8, 8, 8, -8 )

[node name="Badguy" parent="." instance=ExtResource( 4 )]
position = Vector2( 144, 80 )
script = ExtResource( 5 )
speed = 32

[node name="Timer" type="Timer" parent="Badguy"]
autostart = true

[node name="Jumper" parent="." instance=ExtResource( 4 )]
position = Vector2( 336, 200 )
script = ExtResource( 5 )
actions = [ "wait", "up", "down", "wait" ]

[node name="Timer" type="Timer" parent="Jumper"]
autostart = true

[node name="Badguy3" parent="." instance=ExtResource( 4 )]
position = Vector2( 744, 280 )
script = ExtResource( 5 )
speed = 100

[node name="Timer" type="Timer" parent="Badguy3"]
autostart = true

[node name="Badguy2" parent="." instance=ExtResource( 4 )]
position = Vector2( -216, 256 )
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="Badguy2"]
autostart = true

[node name="Lava" parent="." instance=ExtResource( 4 )]
position = Vector2( -560, 400 )
scale = Vector2( 146.76, 1 )

[node name="Timer" type="Timer" parent="Lava"]
autostart = true

[node name="EscQuit" parent="." instance=ExtResource( 6 )]

[node name="UI" parent="." instance=ExtResource( 7 )]
[connection signal="body_entered" from="Victory" to="." method="_on_Victory_body_entered"]
[connection signal="body_entered" from="Victory2" to="." method="_on_Victory_body_entered"]
[connection signal="body_entered" from="Badguy" to="." method="_on_Badguy_body_entered"]
[connection signal="timeout" from="Badguy/Timer" to="Badguy" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Jumper" to="." method="_on_Badguy_body_entered"]
[connection signal="timeout" from="Jumper/Timer" to="Jumper" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Badguy3" to="." method="_on_Badguy_body_entered"]
[connection signal="timeout" from="Badguy3/Timer" to="Badguy3" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Badguy2" to="." method="_on_Badguy_body_entered"]
[connection signal="timeout" from="Badguy2/Timer" to="Badguy2" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Lava" to="." method="_on_Badguy_body_entered"]
[connection signal="timeout" from="Lava/Timer" to="Lava" method="_on_Timer_timeout"]
[connection signal="quit" from="UI" to="." method="_on_UI_quit"]
[connection signal="try_again" from="UI" to="." method="_on_UI_try_again"]
